# kursovaya

./: .gitignore  .gitignore.io  3DGrid.py  CMakeLists.txt  CMakePresets.json  coef.txt  common_includes.h  dif.txt  elements_out.txt  f.txt  faces.txt  genGridAndShow.sh  grid.txt  gridGeneration.cpp  hexFEM.cpp  input.cpp  input.h  nodes.txt  nodes_out.txt  output.txt  q.txt  structures.cpp  structures.h  time.txt  u_functions.cpp  u_functions.h
